...

    <LinearLayout
        android:id="@+id/report_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/infection_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/infection_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/chills_fever_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/chills_fever_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/taste_smell_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/taste_smell_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/muscle_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/muscle_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/cough_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/cough_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/breathing_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/breathing_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/conjunctivitis_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/conjunctivitis_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/gi_symptoms_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_weight="0.5" />
                    <Button
                        android:id="@+id/gi_symptoms_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/submit_health_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

    <LinearLayout
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

        <ImageButton
            android:id="@+id/report"
            android:contentDescription="@string/report"
            android:layout_width="wrap_content"
...

        <ImageButton
            android:id="@+id/profile"
            android:contentDescription="@string/profile"
            android:layout_width="wrap_content"
...
