...
    <string name="test_records">COVID Test Records</string>
    <string name="no_test_records"><i>No COVID test result reported.</i></string>
    <string name="online"><b>Online</b></string>
    <string name="hybrid"><b>Hybrid</b></string>
    <string name="in_person"><b>In Person</b></string>
    <string name="assess"><b>Assess</b></string>
    <string name="negative_result">Negative</string>
    <string name="positive_result">Positive</string>
    <string name="add_records">Add Test Result</string>
    <string name="course_risk_report">Course Risk Report</string>
    <string name="positive_students">Positive Students: %d</string>
    <string name="high_risk_students">High Risk Students: %d</string>
    <string name="low_risk_students">Low Risk Students: %d</string>
    <string name="change_online">Change to Online</string>
...
